# Project

./: .gitignore
.github/workflows/: ci.yml
patient-encounter-system/: .coverage  pyproject.toml  test.db
patient-encounter-system/.github/workflows/: ci.yml
patient-encounter-system/src/patient_encounter_system/: main.py  models.py  services.py
patient-encounter-system/tests/: conftest.py
