[project]
name = "patient-encounter-system"
version = "0.1.0"
description = ""
authors = [
    {name = "Omkaar",email = "omkaarkasodekar@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "alembic (>=1.18.3,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "fastapi (>=0.128.0,<0.129.0)",
    "mysql-connector-python (>=9.6.0,<10.0.0)",
    "uvicorn (>=0.40.0,<0.41.0)"
]

[tool.poetry]
packages = [{include = "patient_encounter_system", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
